--- a/D3/index.html
+++ b/D3/index.html
@@ -35,10 +35,12 @@
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">I più ascoltati</a>
+              <a class="nav-link" href="#">Gli album della mia vita</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">I meno ascoltati</a>
+              <a class="nav-link" href="#"
+                >Ti spiego perchè dovresti ascoltare questi album!</a
+              >
             </li>
             <li class="nav-item dropdown">
               <a
@@ -48,16 +50,14 @@
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
               >
-                Scopri di più
+                Album che dovremo dimenticare
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a class="dropdown-item" href="#">Gli album della vita</a>
+                  <a class="dropdown-item" href="#">Spotify</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="#"
-                    >Gli album che non dovrebbero esistere</a
-                  >
+                  <a class="dropdown-item" href="#">Amazon Music</a>
                 </li>
                 <li>
                   <a class="dropdown-item" href="#">Playlist condivise</a>
